@@ -2,6 +2,7 @@
 - Better G clef on printed scores
 - Added F clef render on printed scores
 - Added dotted silence rendering
+- Printing : fixed vertical measure dividers to play nicely with scores
 
 1.2b5
 - More minor linux fixes
